Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 14.0.0
-
None
-
-
3cb03be0f (master), c7aae25b9 (14.0)
Description
- I am trying to create a docker device from my host machine (running Qt Creator 14.0.0 on Ubuntu 22.04.4 LTS Dell Optiplex) to my Jetson Orin NX Devkit via ssh:// access in a LAN network.
- My steps: Open Qt Creator > Preferences > Device > Add > Add Remote Linux Device then i filled data into the popup, create private key, deploy generated public key to the Devkit, ... > Apply > OK. I reopened Preferences > Device > Add > Docker Device, a "Docker Image Selection" showed (as shown in the attached drawing). I selected the "nvcr.io/nvidia/l4t-jetpack:r36.3.0" and Qt Creator crashed!!!. I tried many times but failed.
Attachments
For Gerrit Dashboard: QTCREATORBUG-31364 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
580118,2 | RemoteLinux: Fix crash | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |
580142,4 | Docker: Fix cmdbridge init when docker is remote | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |