Docker: Fix cmdbridge init when docker is remote

If the user has specified a remote path for the "docker" executable
it is not possible to simply bind the cmdbridge as its on a different device.

We fall back to copying the cmdbridge in this case.

Task-number: QTCREATORBUG-31364
Change-Id: I03b5594c1c942fe6539a45a32d2a31e24f2a493b
Reviewed-by: hjk <hjk@qt.io>